2007-05-18  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* CreateParams.cs: Make HasWindowManager marginally faster.
	* XplatUIX11.cs, Hwnd.cs: CreateWindow: Move the default location code
	  into Hwnd so that other drivers can use it as well.
	* XplatUIWin32.cs: CreateWindow: If the window has a window manager get
	  the default location from Hwnd. Fixes MDI client windows always
	  showing up at (0,0) in Windows (Win32 won't set the default
	  location since the window styles aren't correct).

2007-05-18  Gert Driesen  <drieseng@users.sourceforge.net>

	* TreeView.cs: Modified DoubleBuffered to just use the base
	implementation.

2007-05-18  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Set the top node to the last child node when
	expanding all
	- When we get focus, if there is no selected node, use the top
	node.

2007-05-18  Jonathan Pobst  <monkey@jpobst.com>

	* KeysConverter.cs: Add CanConvertTo.
	* LinkLabel.cs: Add some 2.0 constructors and properties to LinkLabel.Link.
	* LinkConverter.cs: Added.

2007-05-18  Everaldo Canuto  <ecanuto@novell.com>

	* Cursor.cs: Apply Sebastien patch from #81669 to open file in read mode,
	it prevents error when file dont have write access. Fixes #81669 and #81667.  

2007-05-18  Everaldo Canuto  <ecanuto@novell.com>

	* ThemeWin32Classic.cs: Check for ShowKeyboardCues true when draw toolbar 
	button text. Fixes #79640.  

2007-05-18  Everaldo Canuto  <ecanuto@novell.com>

	* Control.cs: According to MSDN controls created in the designer theres 
	keyboard accelerators visible by default. So included check for design
	in ShowKeyboardCuesInternal.  

2007-05-18  Everaldo Canuto  <ecanuto@novell.com>

	* ThemeWin32Classic.cs: Check for ShowKeyboardCues true when draw combobox 
	text. Fixes #81621.  

2007-05-18  Everaldo Canuto  <ecanuto@novell.com>

	* Control.cs: ShowKeyboardCuesInternal add to expose ShowKeyboardCues
	for 1.0, becuse ShowKeyboardCues is protected on 1.0.  
